<resources>
    <string name="app_name">EcratumMobileMVP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login to Ecratum</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_modules">ModulesActivity</string>
    <string name="title_activity_complaint">ComplaintActivity</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="users">Users</string>
    <string name="when_happens">When It Happens</string>
    <string name="add_images">Add Images</string>
    <string name="total_images">Images left To add</string>
    <string name="new_image">New Image</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="when_it_happen">When</string>
</resources>
